# MalStrap

./: .gitignore  Cargo.toml  Readme.md  changelog.md  result.json
src/: cli.rs  config.rs  main.rs  project_manager.rs  sample.rs
src/sample/: local_report.rs  vt_report.rs
src/sample/vt_report/: vt_connect.rs
src/sample/vt_report/vt_connect/: file.rs  responses.rs
src/sample/vt_report/vt_connect/file/: info.rs  reports.rs
