[package]
name = "mal_strap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4.3"
ini = "1.3.0"
openssl = "0.10.64"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tree_magic = "0.2.3"
